--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,14 @@ video {
     opacity: 0;
   }
 }
+
+@keyframes fade-in-down {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
