--- a/src/App.css
+++ b/src/App.css
@@ -125,6 +125,20 @@ video {
   color: #000;
 }
 
+.loader {
+  border-top-color: #3498db;
+  animation: spinner 1.5s linear infinite;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 @keyframes rippleAfter {
   100% {
     transform: scale(1.4);
